kdrive: Purge Xsdl
From the original Xsdl commit:
"sdl x server so that we can x-on-x the fb stuff for ease of debugging. if
anyone uses this in production, a big scary monster will eat them.
hrm, perhaps i should make it have a --i-know-what-i'm-doing
param that it doens't start without, heh"

That should be reason enough to not spend time maintaing it. Also, no more
elephants.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/hw/kdrive/Makefile.am
+++ b/hw/kdrive/Makefile.am
@@ -6,10 +6,6 @@ if XFAKESERVER
 XFAKE_SUBDIRS = fake
 endif
 
-if XSDLSERVER
-XSDL_SUBDIRS = sdl
-endif
-
 if XEPHYR
 XEPHYR_SUBDIRS = ephyr
 endif
@@ -19,7 +15,6 @@ LINUX_SUBDIRS = linux
 endif
 
 SERVER_SUBDIRS = 		\
-	$(XSDL_SUBDIRS)		\
 	$(FBDEV_SUBDIRS)	\
 	$(XEPHYR_SUBDIRS)       \
 	$(XFAKE_SUBDIRS)
@@ -29,7 +24,7 @@ SUBDIRS =			\
 	$(LINUX_SUBDIRS)	\
 	$(SERVER_SUBDIRS)
 
-DIST_SUBDIRS = fbdev sdl ephyr src linux fake
+DIST_SUBDIRS = fbdev ephyr src linux fake
 
 relink:
 	@for i in $(SERVER_SUBDIRS) ; do make -C $$i relink ; done
