Fix 'distcheck' to use host xkb files but install to build dir
'make distcheck' needs to read xkb files and write out compiled
versions as a part of the 'make check' phase. This patch passes
suitable options to the configure stage of the distcheck process to
read xkb files from the system location and write them to the
distcheck _inst directory.

Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -51,6 +51,11 @@ endif
 
 EXTRA_DIST = xorg-server.pc.in xorg-server.m4 ChangeLog autogen.sh
 
+DISTCHECK_CONFIGURE_FLAGS=\
+	--with-xkb-path=$(XKB_BASE_DIRECTORY) \
+	--with-xkb-bin-directory=$(XKB_BIN_DIRECTORY) \
+	--with-xkb-output='$${datadir}/X11/xkb/compiled'
+
 DISTCLEANFILES = doltcompile doltlibtool
 MAINTAINERCLEANFILES=ChangeLog
 
