.gitignore: use common defaults with custom section #24239
Using common defaults will reduce errors and maintenance.
Only the very small or inexistent custom section need periodic maintenance
when the structure of the component changes. Do not edit defaults.

Reviewed-By: Jeremy Huddleston <jeremyhu@apple.com>
Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,154 +1,80 @@
-ChangeLog
-Makefile
-Makefile.in
-.deps
-.libs
-.msg
-*.lo
-*.la
-*.a
-*.o
-*~
-.*sw?
-*.pbxuser
-*.mode1v3
-*.patch
-*.exe
-obj*
-build*
-cscope*
-local
+#
+#		X.Org module default exclusion patterns
+#		The next section if for module specific patterns
+#
+#	Do not edit the following section
+# 	GNU Build System (Autotools)
 aclocal.m4
-autom4te.cache
+autom4te.cache/
+autoscan.log
 ChangeLog
 compile
 config.guess
+config.h
+config.h.in
 config.log
+config-ml.in
+config.py
 config.status
+config.status.lineno
 config.sub
 configure
-configure.lineno
+configure.scan
 depcomp
+.deps/
+INSTALL
+install-sh
+.libs/
+libtool
+libtool.m4
+ltmain.sh
+lt~obsolete.m4
+ltoptions.m4
+ltsugar.m4
+ltversion.m4
+Makefile
+Makefile.in
+mdate-sh
+missing
+mkinstalldirs
+*.pc
+py-compile
+stamp-h?
+symlink-tree
+texinfo.tex
+ylwrap
+
+#	Do not edit the following section
+# 	Edit Compile Debug Document Distribute
+*~
+*.[0-9]
+*.[0-9]x
+*.bak
+*.bin
+core
+*.dll
+*.exe
+*-ISO*.bdf
+*-JIS*.bdf
+*-KOI8*.bdf
+*.kld
+*.ko
+*.ko.cmd
+*.lai
+*.l[oa]
+*.[oa]
+*.obj
+*.patch
+*.so
+*.pcf.gz
+*.pdb
+*.tar.bz2
+*.tar.gz
+#
+#		Add & Override patterns for xserver 
+#
+#		Edit the following section as needed
+# For example, !report.pc overrides *.pc. See 'man gitignore'
+# 
 doltcompile
 doltlibtool
-install-sh
-libtool
-ltmain.sh
-missing
-TAGS
-tags
-cscope*
-ylwrap
-xorg-server.pc
-xorg-server-*.tar.bz2
-xorg-server-*.tar.gz
-stamp-h?
-dix/Xserver-dtrace.h
-do-not-use-config.h
-do-not-use-config.h.in
-dix/dix.c
-os/os.c
-doc/Xserver.1x
-doc/Xserver.man
-hw/dmx/Xdmx
-hw/dmx/Xdmx.1x
-hw/dmx/config/dmxtodmx
-hw/dmx/config/dmxtodmx.1x
-hw/dmx/config/parser.c
-hw/dmx/config/parser.h
-hw/dmx/config/scanner.c
-hw/dmx/config/vdltodmx
-hw/dmx/config/vdltodmx.1x
-hw/dmx/config/xdmxconfig
-hw/dmx/config/xdmxconfig.1x
-hw/dmx/examples/dmxaddinput
-hw/dmx/examples/dmxaddscreen
-hw/dmx/examples/dmxreconfig
-hw/dmx/examples/dmxresize
-hw/dmx/examples/dmxrminput
-hw/dmx/examples/dmxrmscreen
-hw/dmx/examples/dmxwininfo
-hw/dmx/examples/ev
-hw/dmx/examples/evi
-hw/dmx/examples/res
-hw/dmx/examples/xbell
-hw/dmx/examples/xdmx
-hw/dmx/examples/xinput
-hw/dmx/examples/xled
-hw/dmx/examples/xtest
-hw/kdrive/ephyr/Xephyr
-hw/kdrive/fake/Xfake
-hw/kdrive/fbdev/Xfbdev
-hw/kdrive/vesa/Xvesa
-hw/vfb/Xvfb
-hw/vfb/Xvfb.1x
-hw/vfb/Xvfb.man
-hw/xfree86/Xorg
-hw/xfree86/common/xf86Build.h
-hw/xfree86/common/xf86DefModeSet.c
-hw/xfree86/doc/man/Xorg.1x
-hw/xfree86/doc/man/Xorg.man
-hw/xfree86/doc/man/xorg.conf.5x
-hw/xfree86/doc/man/xorg.conf.man
-hw/xfree86/exa/exa.4
-hw/xfree86/exa/exa.4x
-hw/xfree86/exa/exa.man
-hw/xfree86/fbdevhw/fbdevhw.4x
-hw/xfree86/fbdevhw/fbdevhw.man
-hw/xfree86/os-support/xorgos.c
-hw/xfree86/osandcommon.c
-hw/xfree86/ramdac/xf86BitOrder.c
-hw/xfree86/utils/cvt/cvt
-hw/xfree86/utils/cvt/cvt.man
-hw/xfree86/utils/gtf/gtf
-hw/xfree86/utils/gtf/gtf.1x
-hw/xfree86/utils/gtf/gtf.man
-hw/xfree86/xaa/l-xaaBitmap.c
-hw/xfree86/xaa/l-xaaStipple.c
-hw/xfree86/xaa/l-xaaTEGlyph.c
-hw/xfree86/xaa/l3-xaaBitmap.c
-hw/xfree86/xaa/l3-xaaStipple.c
-hw/xfree86/xaa/lf-xaaBitmap.c
-hw/xfree86/xaa/lf-xaaStipple.c
-hw/xfree86/xaa/lf-xaaTEGlyph.c
-hw/xfree86/xaa/lf3-xaaBitmap.c
-hw/xfree86/xaa/lf3-xaaStipple.c
-hw/xfree86/xaa/m-xaaBitmap.c
-hw/xfree86/xaa/m-xaaStipple.c
-hw/xfree86/xaa/m-xaaTEGlyph.c
-hw/xfree86/xaa/m3-xaaBitmap.c
-hw/xfree86/xaa/m3-xaaStipple.c
-hw/xfree86/xaa/mf-xaaBitmap.c
-hw/xfree86/xaa/mf-xaaStipple.c
-hw/xfree86/xaa/mf-xaaTEGlyph.c
-hw/xfree86/xaa/mf3-xaaBitmap.c
-hw/xfree86/xaa/mf3-xaaStipple.c
-hw/xfree86/xaa/s-xaaDashLine.c
-hw/xfree86/xaa/s-xaaLine.c
-hw/xfree86/xorg.c
-hw/xfree86/libxorg.c
-hw/xfree86/loader/sdksyms.c
-hw/xfree86/xorg.conf.example
-hw/xfree86/xorg.conf.example.pre
-hw/xnest/Xnest
-hw/xnest/Xnest.1x
-hw/xnest/Xnest.man
-hw/xquartz/bundle/Info.plist
-hw/xquartz/mach-startup/mach_startup.h
-hw/xquartz/mach-startup/mach_startupServer.c
-hw/xquartz/mach-startup/mach_startupServer.h
-hw/xquartz/mach-startup/mach_startupUser.c
-hw/xquartz/mach-startup/X11.bin
-hw/xquartz/mach-startup/Xquartz
-hw/xquartz/doc/Xquartz.1
-hw/xwin/winprefslex.c
-hw/xwin/winprefsyacc.c
-hw/xwin/winprefsyacc.h
-include/dix-config.h
-include/kdrive-config.h
-include/version-config.h
-include/xkb-config.h
-include/xorg-config.h
-include/xorg-server.h
-include/xwin-config.h
-sdksyms.dep
