--- a/hw/xfree86/.gitignore
+++ b/hw/xfree86/.gitignore
@@ -1,4 +1,7 @@
 #		Add & Override for this directory and it's subdirectories
+libxorg.c
 Xorg
-Xorg.man
-xorg.conf.man
+xorg.c
+xorg.conf.example
+xorg.conf.example.pre
+
