--- a/hw/xfree86/xaa/.gitignore
+++ b/hw/xfree86/xaa/.gitignore
@@ -1,7 +1,4 @@
 #		Add & Override for this directory and it's subdirectories
-dmxtodmx
-parser.c
-parser.h
-scanner.c
-vdltodmx
-xdmxconfig
+[lms]-xaa*.c
+[lm]f3-xaa*.c
+[lm][f3]-xaa*.c
