--- a/Makefile.am
+++ b/Makefile.am
@@ -49,7 +49,7 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = xorg-server.pc
 endif
 
-EXTRA_DIST = xorg-server.pc.in xorg-server.m4 ChangeLog autogen.sh
+EXTRA_DIST = xorg-server.pc.in xorg-server.m4 autogen.sh
 
 DISTCHECK_CONFIGURE_FLAGS=\
 	--with-xkb-path=$(XKB_BASE_DIRECTORY) \
@@ -57,7 +57,6 @@ DISTCHECK_CONFIGURE_FLAGS=\
 	--with-xkb-output='$${datadir}/X11/xkb/compiled'
 
 DISTCLEANFILES = doltcompile doltlibtool
-MAINTAINERCLEANFILES=ChangeLog
 
 .PHONY: ChangeLog
 
