kdrive: Remove bus mouse driver
Bus mice aren't used anymore, do not keep dead code around.

Reviewed-by: Adam Jackson <ajax@redhat.com>
Reviewed-by: Daniel Stone <daniel@fooishbar.org>
Signed-off-by: Mikhail Gusarov <dottedmag@dottedmag.net>

--- a/hw/kdrive/linux/Makefile.am
+++ b/hw/kdrive/linux/Makefile.am
@@ -19,7 +19,7 @@ liblinux_la_SOURCES += evdev.c
 endif
 
 if KDRIVE_MOUSE
-liblinux_la_SOURCES += mouse.c bus.c ms.c ps2.c
+liblinux_la_SOURCES += mouse.c ms.c ps2.c
 endif
 
 if TSLIB
